--- a/templates/index.html
+++ b/templates/index.html
@@ -47,22 +47,4 @@
   </div>
 </body>
 </html>
-<script>
-  $('#send-request-btn').click(function() {
-
-    let webhook_url = $("#InputWebHookUrl").val();
-    let username =    $("#InputUsername").val();
-    let content =     $('#InputContent').val();
-    let avatar_url =  $('#InputAvatarUrl').val();
-
-    $.post( "/post-to-webhook",
-    {
-      webhook_url: webhook_url,
-      username: username,
-      content: content,
-      avatar_url: avatar_url
-    },
-    "json"
-    );
-  });
-</script>
+<script src="/assets/index.js"></script>
