Added social badges

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     </div>
   </nav>
   <div class="content d-flex">
-    <div class="card" style="width: 50%;">
+    <div class="card" style="width: 50%;border-radius: 0%;">
     <div class="card-header">
       Send a request
     </div>
@@ -46,7 +46,7 @@
       </form>
     </div>
     </div>
-    <div class="card" style="width: 50%;">
+    <div class="card" style="width: 50%;border-radius: 0%;">
       <div class="card-header">
         Preview
       </div>
@@ -67,6 +67,8 @@
       </div>
     </div>
   </div>
+  <span class="mt-5 mb-3 text-muted" style="position: absolute; bottom: 0px;padding: 0.75rem 1.25rem;">Created with ❤️ by  <a href="https://github.com/IvanReyesO7"><img src="https://img.shields.io/badge/IvanReyesO7-gingonic--discord-purple"><img src="https://img.shields.io/github/followers/IvanReyesO7?style=social"></a></span>
+  
 </body>
 </html>
 <script src="/assets/index.js"></script>
