--- a/templates/index.html
+++ b/templates/index.html
@@ -69,8 +69,10 @@
       </div>
     </div>
   </div>
+  {{ range .alert }}
+    <div class="alert alert-danger" role="alert">{{ . }}</div>
+  {{ end }}
   <span class="mt-5 mb-3 text-muted" style="position: absolute; bottom: 0px;padding: 0.75rem 1.25rem;">Created with ❤️ by  <a href="https://github.com/IvanReyesO7"><img src="https://img.shields.io/badge/IvanReyesO7-gingonic--discord-purple"><img src="https://img.shields.io/github/followers/IvanReyesO7?style=social"></a></span>
-  
 </body>
 </html>
 <script src="/assets/index.js"></script>
