--- a/templates/index.html
+++ b/templates/index.html
@@ -70,8 +70,11 @@
     </div>
   </div>
   {{ range .alert }}
-    <div class="alert alert-danger" role="alert">{{ . }}</div>
+  <div id="alert-danger" class="alert alert-danger" role="alert">{{ . }}</div>
   {{ end }}
+  <div id="alert-success" class="alert alert-success" role="alert" style="display: none;">
+    Message posted! 🎉
+  </div>
   <span class="mt-5 mb-3 text-muted" style="position: absolute; bottom: 0px;padding: 0.75rem 1.25rem;">Created with ❤️ by  <a href="https://github.com/IvanReyesO7"><img src="https://img.shields.io/badge/IvanReyesO7-gingonic--discord-purple"><img src="https://img.shields.io/github/followers/IvanReyesO7?style=social"></a></span>
 </body>
 </html>
